# PyLX200Mount

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
python/pylx200/: __init__.py  lx200.py  observing_location.py  socket_server.py
python/pylx200/alignment/: alignment_handler.py
python/pylx200/controller/: mount_controller.py
python/pylx200/phidgets/: my_stepper.py
python/pylx200mount/: __init__.py  datetime_util.py  enums.py  lx200_mount.py  observing_location.py  utils.py
python/pylx200mount/alignment/: __init__.py  affine_transformation.py  alignment_handler.py
python/pylx200mount/asi/: __init__.py  asi_interface.py
python/pylx200mount/camera/: __init__.py  base_camera.py
python/pylx200mount/controller/: __init__.py  base_mount_controller.py  configuration_schema.json  demo_mount_controller.py  lx200_command_reponder.py  mount_controller.py  utils.py
python/pylx200mount/emulation/: __init__.py  emulated_camera.py  emulated_motor_controller.py  emulated_plate_solver.py
python/pylx200mount/motor/: __init__.py  base_motor_controller.py  trajectory.py
python/pylx200mount/my_math/: __init__.py  astropy_util.py
python/pylx200mount/phidgets/: __init__.py  phidgets_motor_controller.py  phidgets_mount_controller.py  phidgets_stepper.py
python/pylx200mount/plate_solver/: __init__.py  plate_solver.py  (+1 more)
tests/pylx200mount/: base_lx200_mount_integration_test.py  test_lx200_mount.py  test_lx200_mount_push_to.py  test_lx200_mount_with_motors.py
(+56 files in other folders)
